k8s/magnus-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnus-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magnus-worker
  template:
    metadata:
      labels:
        app: magnus-worker
    spec:
      containers:
        - name: magnus-worker
          image: amankashyap07/magnus-api:latest
          command: ["node", "src/worker.js"]
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: docker-socket
              mountPath: /var/run/docker.sock
            - name: temp-builds
              mountPath: /tmp/magnus-builds
            - name: build-cache
              mountPath: /home/azureuser/ci-cd-engine/backend/caches
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: temp-builds
          hostPath:
            path: /tmp/magnus-builds
        - name: build-cache
          hostPath:
            path: /var/run/docker-cache-dir
