k8s/magnus-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnus-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: magnus-api
  template:
    metadata:
      labels:
        app: magnus-api
    spec:
      containers:
        - name: magnus-api
          image: amankashyap07/magnus-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: magnus-api
spec:
  type: ClusterIP
  selector:
    app: magnus-api
  ports:
    - port: 5001
      targetPort: 5001
