k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magnus-ci-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - magnus-ci.online
      secretName: magnus-ci-tls
  rules:
    - host: magnus-ci.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magnus-api
                port:
                  number: 5001
